--- a/maintenance/payment/style.css
+++ b/maintenance/payment/style.css
@@ -8,6 +8,7 @@
     background-color: aliceblue;
     margin-bottom: 20px;
     border-radius: 10px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .header-info {
@@ -16,7 +17,7 @@
     justify-content: space-between;
     padding: 10px;
     background-color: #1e90ff;
-    border-radius: 10px 10px 0 0;
+    border-radius: 10px;
 }
 
 .dropdown-plus {
@@ -25,7 +26,7 @@
     align-items: center;
     justify-content: space-between;
     padding: 10px;
-    background-color: #f0f8ff;
+    background-color: lightgray;
     border-radius: 0 0 10px 10px;
 }
 
@@ -41,12 +42,29 @@
     flex-direction: row;
     min-width: 15%;
     justify-content: space-between;
+    gap: 1rem;
 }
 
 #header-full {
     color: white;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 #pay-full {
     width: 70px;
+}
+
+.header-info {
+    background-color: white;
+    letter-spacing: -1%;
+}
+
+.header-info button, .dropdown-plus button {
+    margin: 0;
+    padding: 0 10px;
+}
+
+h1 {
+    padding: 1rem;
+    font-weight: 800;
 }
