--- a/front-end/src/app/register/register.component.css
+++ b/front-end/src/app/register/register.component.css
@@ -15,7 +15,7 @@ body {
 
 main {
     --bg-color: transparent;
-    --main-height: 100dvh; 
+    --main-height: 100dvh;
 
     height: 100dvh;
     background: var(--bg-color);
@@ -25,7 +25,8 @@ main {
     justify-content: center;
 }
 
-header, footer {
+header,
+footer {
     background: var(--bg-color);
     height: var(--height);
     max-height: var(--max-height);
@@ -91,7 +92,8 @@ footer #developers span {
     height: 100%;
 }
 
-#register, #login {
+#register,
+#login {
     height: 100%;
     aspect-ratio: 3/1.5;
     display: flex;
@@ -101,7 +103,7 @@ footer #developers span {
 
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 600;
-    
+
     font-family: "Poppins", sans-serif;
     text-transform: uppercase;
     padding: 0.2rem;
@@ -120,7 +122,8 @@ footer #developers span {
     font-size: 1rem;
 }
 
-#register::after, #login::after {
+#register::after,
+#login::after {
     content: "";
     height: calc(100% - 0.8rem);
     aspect-ratio: 3/1.5;
@@ -130,7 +133,8 @@ footer #developers span {
     border-radius: 0.8rem;
 }
 
-#register::before, #login::before {
+#register::before,
+#login::before {
     content: "";
     height: calc(100% - 0.8rem);
     aspect-ratio: 3/1.5;
@@ -140,11 +144,13 @@ footer #developers span {
     border-radius: 0.8rem;
 }
 
-#register:hover::before, #login:hover::before {
+#register:hover::before,
+#login:hover::before {
     background: linear-gradient(135deg, orange, red);
 }
 
-#register:hover::after, #login:hover::after {
+#register:hover::after,
+#login:hover::after {
     background: var(--bg-color);
 }
 
@@ -229,7 +235,11 @@ form button:focus {
     gap: 1rem;
 }
 
-form input:focus{
+.form-item{
+    width: 50% ;
+}
+
+form input:focus {
     outline: none;
     border-color: #3282B8;
     box-shadow: 0 0 8px rgba(50, 130, 184, 0.6);
@@ -238,4 +248,22 @@ form input:focus{
 a {
     text-decoration: none;
     color: inherit;
+}
+
+.div-errors{
+    margin: 0;
+    padding: 0;
+    text-align: start;
+    box-sizing: unset;
+}
+input.ng-invalid.ng-touched,
+input.ng-invalid.ng-dirty {
+    border: 1px solid red;
+}
+
+.text-danger {
+    font-family: Arial, Helvetica, sans-serif;
+    color: red;
+    font-size: 0.8rem;
+    text-align: left;
 }
