[ADD] home-client.component

--- a/front-end/src/app/login/login.component.html
+++ b/front-end/src/app/login/login.component.html
@@ -37,7 +37,7 @@
                         <input type="password" name="password" id="password" placeholder="Senha">
                     </div>
                     <label id="Fpassowrd">Esqueci minha senha</label>
-                    <a href="../homeCliente/"><button type="button">Entrar</button></a>
+                    <a (click)="goToHomeCliente()"><button type="button">Entrar</button></a>
                 </form>
             </div>
             <div class="container">
