[ADD] Header e Navbar components

--- a/front-end/src/app/header-cliente/header-cliente.component.html
+++ b/front-end/src/app/header-cliente/header-cliente.component.html
@@ -1,1 +1,16 @@
-<p>header-cliente works!</p>
+<header>
+<div class="container_top">
+  <div class="container_top_left">
+  </div>
+  <div class="container_top_center">
+    <h1>Manutenção de Equipamentos</h1>
+  </div>
+  <div class="container_top_right">
+    <h4>Nome do Cliente</h4>
+    <h4>emailDoClientegmail.com</h4>
+    <a href="../home/index.html">
+      <button>Sair</button>
+    </a>
+  </div>
+</div>
+</header>
