--- a/homeCliente/orcamento/style.css
+++ b/homeCliente/orcamento/style.css
@@ -43,20 +43,21 @@ main .main-content {
     padding-top: 2%;
 }
 
-main .main-content h2,h3 {
+main .main-content h2,
+h3 {
     color: white;
     font-family: "Poppins", sans-serif;
     font-size: 4dvh;
     padding-bottom: 0.5dvh;
 }
 
-main .main-content h2{
+main .main-content h2 {
     text-align: center;
     font-size: 7dvh;
     margin-bottom: 3dvh;
 }
 
-main .main-content .item-detail{
+main .main-content .item-detail {
     height: 15dvh;
     width: 50%;
     margin: auto;
@@ -79,11 +80,11 @@ main .main-content .item-detail p span {
     padding-left: 3dvh;
 }
 
-main .main-content #div-orcamento{
+main .main-content #div-orcamento {
     text-align: end;
 }
 
-main .main-content .buttons{
+main .main-content .buttons {
     text-align: center;
     width: 50%;
     height: 5dvh;
@@ -121,17 +122,16 @@ button {
 
 button:hover,
 button:focus {
-  background-color: #fb8332;
-  box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
+    background-color: #fb8332;
+    box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
 }
 
 button:hover {
-  transform: translateY(-1px);
+    transform: translateY(-1px);
 }
 
 button:active {
-  background-color: #c85000;
-  box-shadow: rgba(0, 0, 0, .06) 0 2px 4px;
-  transform: translateY(0);
+    background-color: #c85000;
+    box-shadow: rgba(0, 0, 0, .06) 0 2px 4px;
+    transform: translateY(0);
 }
-
