--- a/employer/viewMaintenance/style.css
+++ b/employer/viewMaintenance/style.css
@@ -1,255 +1,211 @@
 * {
-    border: 0;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+	border: 0;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
 body {
-    --bg-color: radial-gradient(circle at center, var(--gray), var(--black) 60%);
-    background: var(--bg-color);
-    width: 100vw;
-    min-height: 100dvh;
+	--bg-color: radial-gradient(
+		circle at center,
+		var(--gray),
+		var(--black) 60%
+	);
+	background: var(--bg-color);
+	width: 100vw;
+	min-height: 100dvh;
 }
 
 main {
-    --bg-color: transparent;
-    --main-height: 100dvh; 
-    height: 100dvh;
-    background: var(--bg-color);
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+	--bg-color: transparent;
+	height: calc(100dvh - 4rem);
+	background: var(--bg-color);
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 #container {
-    display: flex;
-    flex-direction: column;
-    width: 40%;
-    text-align: center;
-    background: rgba(255, 255, 255, 0.05);
-    padding: 1%;
-    border-radius: 10px;
-}
+	display: flex;
+	flex-direction: column;
+	width: 40%;
+	text-align: center;
+	background: rgba(255, 255, 255, 0.05);
+	padding: 1%;
+	border-radius: 10px;
+    height: 100%;
 
-#title-container {
-    color: white;
-    font-family: "Rubik", sans-serif;
-    font-weight: 700;
-    display: flex;
-    flex-direction: column;
-    word-spacing: -1%;
-}
-
-#sub-container {
-    display: flex;
-    align-items: center;
-    margin: -0.5rem;
-}
-
-#manutencao{
-    font-size: 5.2rem;
-}
-
-#de{
-    font-size: 3rem;
-    font-family: "Rubik", sans-serif;
-    rotate: 270deg;
-    width: auto;
-}
-
-#equipamentos{
-    font-size: 4rem;
-}
-
-header, footer {
-    background: var(--bg-color);
-    height: var(--height);
-    max-height: var(--max-height);
-
-    width: 100%;
-    padding: 0.5rem 5dvw;
-    display: flex;
-    align-items: center;
-    position: fixed;
 }
 
 header {
-    --bg-color: transparent;
-    --height: 4rem;
-    --max-height: 4rem;
-
-    top: 0;
-    justify-content: space-between;
-    color: white;
-
+	background: var(--bg-color);
+	height: var(--height);
+	max-height: var(--max-height);
+    width: 100%;
+	padding: 0.5rem 5dvw;
+	display: flex;
+	align-items: center;
+	position: relative;
 }
 
-footer {
-    --bg-color: transparent;
-    --height: 4rem;
-    --max-height: 4rem;
+header {
+	--bg-color: transparent;
+	--height: 4rem;
+	--max-height: 4rem;
 
-    bottom: 0;
-    justify-content: center;
+	top: 0;
+	justify-content: space-between;
+	color: white;
 }
 
 header #icon {
-    --bg-color: linear-gradient(135deg, orange, red);
+	--bg-color: linear-gradient(135deg, orange, red);
 
-    background: var(--bg-color);
-    height: 100%;
-    aspect-ratio: 1/1;
-    border-radius: 50%;
-}
-
-footer #developers {
-    --font-color: var(--white);
-    --font-height: 1.15rem;
-
-    font-family: Arial, Helvetica, sans-serif;
-    word-spacing: -0.5%;
-    color: var(--font-color);
-    font-size: var(--font-height);
-    font-weight: 600;
-    font-variant: small-caps;
-}
-
-footer #developers span {
-    --font-color: var(--blue2);
-
-    color: var(--font-color);
+	background: var(--bg-color);
+	height: 100%;
+	aspect-ratio: 1/1;
+	border-radius: 50%;
 }
 
 h1 {
-    font-size: 2.5rem;
-    font-family: "Rubik", sans-serif;
-    font-weight: 700;
-    color: white;
-    margin-bottom: 1rem;
-}
-
-form {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    width: 100%;
-}
-
-form label {
-    color: #BBE1FA;
-    font-family: "Rubik", sans-serif;
-    font-weight: 700;
-    color: white;
-    margin-bottom: -12px;
-    text-align: left;
-    margin-left: 5px;
+	font-size: 2.5rem;
+	font-family: "Rubik", sans-serif;
+	font-weight: 700;
+	color: white;
+	margin-bottom: 1rem;
 }
 
 .dropdown {
-    width: 100%;
-    padding: 10px;
-    border-radius: 4px;
-    border: 1px solid #0F4C75;
-    font-size: 16px;
-    transition: all 0.3s ease;
+	width: 100%;
+	padding: 10px;
+	border-radius: 4px;
+	border: 1px solid #0f4c75;
+	font-size: 16px;
+	transition: all 0.3s ease;
 }
 
 .dropdown option {
-    background-color: #ffffffcc;
-    color: #1B262C;
+	background-color: #ffffffcc;
+	color: #1b262c;
 }
 
-form input, form textarea {
-    height: 2.5rem;
-    padding: 0.5rem;
-    border-radius: 0.5rem;
-    border: 1px solid var(--gray);
-    font-family: Arial, Helvetica, sans-serif;
+.date, .category {
+    width: 30%;
+    font: "Arial", sans-serif;
     font-size: 1rem;
-}
-
-form textarea {
-    resize: none;
-    min-height: 6rem;
-}
-
-form input:focus {
-    border: 1px solid var(--blue2);
+    font-weight: 600;
 }
 
 button {
-    height: 2.5rem;
-    border-radius: 0.5rem;
-    background: linear-gradient(135deg, orange, red);
-    color: white;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 1rem;
-    font-weight: 600;
-    cursor: pointer;
-    margin-bottom: 10px;
+	height: 2.5rem;
+	border-radius: 0.5rem;
+	background: linear-gradient(135deg, orange, red);
+	color: white;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 1rem;
+	font-weight: 600;
+	cursor: pointer;
+    padding: 10px;
 }
 
-form button:hover {
-    background: linear-gradient(135deg, red, orange);
-}
-
-form button:active {
-    background: linear-gradient(135deg, orange, red);
-    transform: scale(0.98);
-}
-
-form button:focus {
-    outline: none;
-}
-
-.dropdown:focus, form input:focus, form textarea:focus {
-    outline: none;
-    border-color: #3282B8;
-    box-shadow: 0 0 8px rgba(50, 130, 184, 0.6);
+.dropdown:focus {
+	outline: none;
+	border-color: #3282b8;
+	box-shadow: 0 0 8px rgba(50, 130, 184, 0.6);
 }
 
 .product {
-    display: flex;
-    flex-direction: column;
-    background-color: aliceblue;
-    margin-bottom: 20px;
-    border-radius: 10px;
-    font-family: Arial, Helvetica, sans-serif;
+	display: flex;
+	flex-direction: column;
+	background-color: aliceblue; 
+	border-radius: 10px;
+	font-family: Arial, Helvetica, sans-serif;
 }
 
 .header-info {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 10px;
-    background-color: #1e90ff;
-    border-radius: 10px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 10px;
+	background-color: white;
+	border-radius: 10px;
+	width: 100%;
+}
+
+.open-dropdown {
+	min-width: 10%;
 }
 
 .state-info {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	width: 20%;
+	gap: 10px;
 }
 
 .state {
-    width: 25px;
-    height: 25px;
-    border-radius: 50%;
+	width: 25px;
+	height: 25px;
+	border-radius: 50%;
+	flex-shrink: 0;
+}
+
+.state-description {
+	font-size: 0.8rem;
+	font-weight: 600;
+	word-wrap: break-word;
+	overflow-wrap: break-word;
+	max-width: 100%;
 }
 
 .red {
-    background-color: red;
+	background-color: red;
+}
+
+.gray {
+	background-color: gray;
+}
+
+.brown {
+	background-color: brown;
+}
+
+.yellow {
+	background-color: yellow;
+}
+
+.purple {
+	background-color: purple;
+}
+
+.blue {
+	background-color: blue;
+}
+
+.orange {
+	background-color: orange;
+}
+
+.green {
+	background-color: green;
 }
 
 .dropdown-plus {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: space-between;
+	padding: 10px;
+	background-color: lightgray;
+	border-radius: 0 0 10px 10px;
+}
+
+#maintenance-list {
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px;
-    background-color: lightgray;
-    border-radius: 0 0 10px 10px;
+    flex-direction: column;
+    width: 100%;
+    gap: 0.5rem;
+    overflow: auto;
 }
