--- a/front-end/src/app/login/login.component.html
+++ b/front-end/src/app/login/login.component.html
@@ -37,14 +37,14 @@
                         <input type="password" name="password" id="password" placeholder="Senha">
                     </div>
                     <label id="Fpassowrd">Esqueci minha senha</label>
-                    <a (click)="goToHomeCliente()"><button type="button">Entrar</button></a>
+                    <button-material [navigateUrl]="'/home-cliente'" text="Entrar"></button-material>
                 </form>
             </div>
             <div class="container">
                 <h1>Registrar</h1>
                 <form action="">
                     <p>Se você ainda não tem uma conta, clique no botão abaixo para se registrar.</p>
-                    <a (click)="goToRegister()"><button type="button">Registrar</button></a>
+                    <button-material [navigateUrl]="'/login/register'" text="Registrar"></button-material>
                 </form>
             </div>
         </div>
