--- a/employer/viewMaintenance/style.css
+++ b/employer/viewMaintenance/style.css
@@ -34,7 +34,7 @@ main {
 	background: rgba(255, 255, 255, 0.05);
 	padding: 1%;
 	border-radius: 10px;
-    height: 100%;
+    max-height: 100%;
 
 }
 
@@ -127,7 +127,7 @@ button {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	padding: 10px;
+	padding: 0px 10px;
 	background-color: white;
 	border-radius: 10px;
 	width: 100%;
@@ -147,8 +147,7 @@ button {
 
 .state {
 	width: 25px;
-	height: 25px;
-	border-radius: 50%;
+	height: 3rem;
 	flex-shrink: 0;
 }
 
@@ -208,4 +207,23 @@ button {
     width: 100%;
     gap: 0.5rem;
     overflow: auto;
+	padding-right: 20px;
+}
+
+::-webkit-scrollbar {
+    width: 10px; 
+    background-color: black; 
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: black; 
+    border-radius: 10px;
+    border: none;
+	margin-left: 10px;
+}
+
+
+::-webkit-scrollbar-track {
+    background-color: white;
+	border-radius: 10px;
 }
