--- a/employee/viewClient/style.css
+++ b/employee/viewClient/style.css
@@ -24,6 +24,7 @@ input[type="text"] {
     font-family: "Poppins", sans-serif;
     color: black;
     background-color: white;
+    margin-top: 20px;
 }
 
 header {
