--- a/employee/viewSolic/style.css
+++ b/employee/viewSolic/style.css
@@ -134,3 +134,7 @@ button:active {
     box-shadow: rgba(0, 0, 0, 0.06) 0 2px 4px;
     transform: translateY(0);
 }
+
+#infos-efetuar-manunt{
+    display: none;
+}
