Add view-solic and view-client components

--- a/front-end/src/app/material/navbar-cliente/navbar-cliente.component.html
+++ b/front-end/src/app/material/navbar-cliente/navbar-cliente.component.html
@@ -1,14 +1,13 @@
 <div class="container-lateral">
-    <h2>Funcionalidades</h2>
-    <ul id="funcionalidades">
-      <li *ngFor="let funcionalidade of funcionalidades">
-        <a [href]="funcionalidade.link">{{ funcionalidade.nome }}</a>
-      </li>
-    </ul>
-  
-    <h2>Filtros</h2>
-    <select id="estado">
-      <option *ngFor="let estado of estados" [value]="estado.toLowerCase()">{{ estado }}</option>
-    </select>
-  </div>
-  
+  <h2>Funcionalidades</h2>
+  <ul id="funcionalidades">
+    <li *ngFor="let funcionalidade of funcionalidades">
+      <a [routerLink]="funcionalidade.link">{{ funcionalidade.nome }}</a>
+    </li>
+  </ul>
+
+  <h2>Filtros</h2>
+  <select id="estado">
+    <option *ngFor="let estado of estados" [value]="estado.toLowerCase()">{{ estado }}</option>
+  </select>
+</div>
