--- a/employee/viewSolic/style.css
+++ b/employee/viewSolic/style.css
@@ -68,7 +68,8 @@ main {
     background: rgba(255, 255, 255, 0.05);
     padding: 1%;
     border-radius: 10px;
-    height: 100%;
+    height: auto;
+    overflow: hidden;
 }
 
 h1 {
@@ -138,3 +139,26 @@ button:active {
 #infos-efetuar-manunt{
     display: none;
 }
+
+#request-info {
+    background: rgba(255, 255, 255, 0.1);
+    padding: 1rem;
+    border-radius: 0.5rem;
+    margin-bottom: 1rem;
+}
+
+#request-info h2 {
+    font-size: 1.5rem;
+    font-family: "Rubik", sans-serif;
+    font-weight: 600;
+    color: white;
+    margin-bottom: 0.5rem;
+}
+
+#request-info p {
+    font-size: 1rem;
+    font-family: "Poppins", sans-serif;
+    color: white;
+    margin-bottom: 0.5rem;
+}
+
