--- a/employee/viewSolic/style.css
+++ b/employee/viewSolic/style.css
@@ -136,8 +136,13 @@ button:active {
     transform: translateY(0);
 }
 
-#infos-efetuar-manunt{
+#infos-efetuar-manunt,
+#redirect-info {
     display: none;
+    background: rgba(255, 255, 255, 0.1);
+    padding: 1rem;
+    border-radius: 0.5rem;
+    margin-bottom: 1rem;
 }
 
 #request-info {
@@ -162,3 +167,10 @@ button:active {
     margin-bottom: 0.5rem;
 }
 
+#select-employee {
+    font-size: 1rem;
+    font-family: "Poppins", sans-serif;
+    color: black;
+    margin-bottom: 0.5rem;
+    padding: 5px;
+}
