--- a/front-end/src/app/pages/employer/view-equipment-category/view-equipment-category.component.html
+++ b/front-end/src/app/pages/employer/view-equipment-category/view-equipment-category.component.html
@@ -1,7 +1,9 @@
+<!--
+Verificar tipo do componente
 <div id="container">
     <h1>Categorias de Equipamentos</h1>
     <div id="category-form">
-      <input type="text" [(ngModel)]="newCategory" placeholder="Nova Categoria" />
+      <input type="text"  [(ngModel)]="newCategory"  placeholder="Nova Categoria" />
       <button (click)="addCategory()">Adicionar</button>
     </div>
     <div id="category-list">
@@ -17,4 +19,4 @@
     </div>
     <button (click)="goBack()">Voltar</button>
   </div>
-  
+--> 
