--- a/front-end/src/app/pages/login/login.component.html
+++ b/front-end/src/app/pages/login/login.component.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <div id="icon" ></div>
+        <div id="icon"></div>
 
         <div id="login-container">
             <a (click)="goToRegister()">
@@ -37,7 +37,7 @@
                         <input type="password" name="password" id="password" placeholder="Senha">
                     </div>
                     <label id="Fpassowrd">Esqueci minha senha</label>
-                    <button-material [navigateUrl]="'/home-cliente'" text="Entrar"></button-material>
+                    <button-material [navigateUrl]="'cliente/home'" text="Entrar"></button-material>
                 </form>
             </div>
             <div class="container">
