--- a/employee/viewEmployee/style.css
+++ b/employee/viewEmployee/style.css
@@ -122,7 +122,7 @@ button {
 }
 
 .employee-input,
-#edit-employee-input {
+.modal-content input {
 	padding: 0.5rem;
 	font-size: 1rem;
 	width: 200px;
@@ -139,18 +139,21 @@ button {
 	width: 30%;
 }
 
-
 #employee-email {
 	width: 65%;
 }
 
-#employee-password{
+#employee-password {
 	width: 30%;
 }
 
-#edit-employee-input {
-    width: 100%;
-    box-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
+.modal-content input {
+	width: 100%;
+	box-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
+}
+
+.modal-content input::placeholder {
+	padding-left: 0.5rem;
 }
 
 .employee-input::placeholder {
@@ -189,11 +192,19 @@ button {
 	align-items: center;
 }
 
+.employee-item div {
+	display: flex;
+	gap: 0.1rem;
+}
+
 .employee-item span {
 	font-size: 1.1rem;
 	font-weight: 600;
 	color: black;
 	font-family: Arial, Helvetica, sans-serif;
+	display: flex;
+	gap: 1.25rem;
+	flex-wrap: wrap;
 }
 
 .employee-item button {
@@ -225,21 +236,22 @@ button {
 	border-radius: 10px;
 	box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
 	position: relative;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
 }
 
 .modal-content div {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
 }
 
-.modal-content h2, .close-button {
-    font-size: 1.5rem;
-    font-weight: 600;
-    font-family: Arial, Helvetica, sans-serif;
+.modal-content h2,
+.close-button {
+	font-size: 1.5rem;
+	font-weight: 600;
+	font-family: Arial, Helvetica, sans-serif;
 }
 
 .close-button {
@@ -256,19 +268,17 @@ button {
 	cursor: pointer;
 }
 
-
 @media screen and (max-width: 1200px) {
 	#employee-inputs {
 		flex-direction: column;
 	}
-	
+
 	#employee-password,
 	#employee-email,
 	#employee-date,
 	#employee-name {
 		width: 99%;
 	}
-
 
 	#add-employee {
 		width: 60%;
