--- a/front-end/src/app/pages/customer/orcamento-cliente/orcamento-cliente.component.html
+++ b/front-end/src/app/pages/customer/orcamento-cliente/orcamento-cliente.component.html
@@ -34,8 +34,8 @@
                     </div>
                 </div>
                 <div class="buttons">
-                    <button onclick="aprovarServico()">Aprovar Serviço</button>
-                    <button onclick="rejeitarServico()">Rejeitar Serviço</button>
+                    <button (click)="aprovarServico()">Aprovar Serviço</button>
+                    <button (click)="rejeitarServico()">Rejeitar Serviço</button>
                 </div>
             </div>
         </main>
