--- a/front-end/src/app/pages/customer/solic-manutencao-cliente/solic-manutencao-cliente.component.html
+++ b/front-end/src/app/pages/customer/solic-manutencao-cliente/solic-manutencao-cliente.component.html
@@ -26,40 +26,42 @@
                         placeholder="Descrição" formControlName="equipmentDescription">
                     <small class="text-danger"
                         *ngIf="equipmentDescription?.hasError('required') && equipmentDescription?.touched">
-                        Nome é obrigatório.
+                        A Descrição do equipamento é obrigatória.
                     </small>
                     <small class="text-danger"
                         *ngIf="equipmentDescription?.hasError('minlength') && equipmentDescription?.touched">
-                        Nome deve ter pelo menos 15 caracteres.
+                        A descrição do equipamento deve ter pelo menos 15 caracteres.
                     </small>
                     <small class="text-danger" *ngIf="equipmentDescription?.hasError('maxlength')">
-                        Nome deve ter no máximo 200 caracteres.
+                        A descrição do equipamento deve ter no máximo 200 caracteres.
                     </small>
                     <label for="equipmentCategory">Categoria do equipamento</label>
                     <select id="equipmentCategory" name="equipmentCategory" class="dropdown"
-                        >
+                        formControlName="equipmentCategory">
                         <option value="" disabled selected>Selecione uma categoria</option>
                         <option value="eletrico">Desktop</option>
                         <option value="hidraulico">Notebook</option>
                         <option value="mecanico">Impressora</option>
                         <option value="mecanico">Mouse</option>
                         <option value="outros">Teclado</option>
-                        <option value="mecanico">Outros</option>
-
                     </select>
+                    <small class="text-danger"
+                        *ngIf="equipmentCategory?.hasError('required') && equipmentCategory?.touched">
+                        Categoria é obrigatório.
+                    </small>
                     <label for="defectDescription">Descrição do defeito </label>
                     <textarea id="defectDescription" name="defectDescription" required placeholder="Defeito"
                         formControlName="defectDescription"></textarea>
                     <small class="text-danger"
                         *ngIf="defectDescription?.hasError('required') && defectDescription?.touched">
-                        Nome é obrigatório.
+                        A descrição do defeito é obrigatória.
                     </small>
                     <small class="text-danger"
                         *ngIf="defectDescription?.hasError('minlength') && defectDescription?.touched">
-                        Nome deve ter pelo menos 30 caracteres.
+                        A descrição do defeito deve ter pelo menos 30 caracteres.
                     </small>
                     <small class="text-danger" *ngIf="equipmentDescription?.hasError('maxlength')">
-                        Nome deve ter no máximo 500 caracteres.
+                        A descrição do defeito deve ter no máximo 500 caracteres.
                     </small>
                     <input type="hidden" id="request-date" name="request-date" value="">
                     <input type="hidden" id="request-status" name="request-status" value="ABERTA">
