arrumando os erros gerados

--- a/front-end/src/app/pages/employee/efetuar-orcamento/efetuar-orcamento.component.html
+++ b/front-end/src/app/pages/employee/efetuar-orcamento/efetuar-orcamento.component.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Orcamento</title>
-    <link rel="stylesheet" href="../style/style-padrao.css">
+    <link rel="stylesheet" href="../../customer/style/style-padrao.css">
 </head>
 
 <body>
