--- a/front-end/src/app/pages/employee/visualizacao-solicitacoes/visualizacao-solicitacoes.component.html
+++ b/front-end/src/app/pages/employee/visualizacao-solicitacoes/visualizacao-solicitacoes.component.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../style/style-padrao.css">
+    <link rel="stylesheet" href="../../customer/style/style-padrao.css">
 </head>
 <body>
     <app-header-cliente></app-header-cliente>
     <div id="principal">
       <app-navbar-funcionario (filtroAplicado)="onFiltroAplicado($event)"></app-navbar-funcionario>
         <main>
-          <h3>Minhas solicitações</h3>
           <div class="tabela">
             <table id="table-user">
               <thead>
