--- a/front-end/src/app/pages/employee/visualizacao-solicitacoes/visualizacao-solicitacoes.component.css
+++ b/front-end/src/app/pages/employee/visualizacao-solicitacoes/visualizacao-solicitacoes.component.css
@@ -1,4 +1,37 @@
-main .tabela {
+* {
+    border: 0;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
+  body {
+    --bg-color: radial-gradient(circle at center, var(--gray), var(--black) 60%);
+    background: var(--bg-color);
+    height: 100dvh;
+    width: 100%;
+    padding-top: 0.5dvh;
+  }
+  
+  #principal{
+    display: flex;
+    width: 100%;
+  }
+  
+  main {
+    margin-left: 1%;
+    width: 82%;
+    padding-top: 2%;
+  }
+  
+  main h3 {
+    color: white;
+    font-family: sans-serif;
+    font-size: 4dvh;
+    padding-bottom: 0.5dvh;
+  }
+  
+  main .tabela {
     width: 100%;
     height: 75dvh;
     margin: 0 auto;
@@ -7,9 +40,9 @@ main .tabela {
     overflow-y: auto;
     overflow-x: hidden;
     position: relative;
-}
-
-main .tabela #table-user {
+  }
+  
+  main .tabela #table-user {
     width: 100%;
     max-height: 73dvh; 
     border-radius: 0.75rem;
@@ -20,30 +53,30 @@ main .tabela #table-user {
     border-collapse: collapse;
     background-color: white;
     z-index: 1;
-}
-
-main .tabela::-webkit-scrollbar {
+  }
+  
+  main .tabela::-webkit-scrollbar {
     width: 8px;
     background-color: rgb(255, 123, 0);
     z-index: 1;
-}
-
-main .tabela::-webkit-scrollbar-thumb {
+  }
+  
+  main .tabela::-webkit-scrollbar-thumb {
     background-color: white;
     border-radius: 4px;
-}
-
-main .tabela::-webkit-scrollbar-thumb:hover {
+  }
+  
+  main .tabela::-webkit-scrollbar-thumb:hover {
     background-color: #666;
-}
-
-main .tabela #table-user td {
+  }
+  
+  main .tabela #table-user td {
     color: #333;
     font-size: 1rem;
     font-weight: 500;
-}
-
-main .tabela #table-user th {
+  }
+  
+  main .tabela #table-user th {
     background-color: rgb(255, 123, 0); 
     color: white;
     font-weight: bold;
@@ -52,13 +85,13 @@ main .tabela #table-user th {
     position: sticky;
     top: 0;
     z-index: 2;
-}
-
-main .tabela #table-user tr {
+  }
+  
+  main .tabela #table-user tr {
     min-height: 50px;
-}
-
-main .tabela #table-user::before {
+  }
+  
+  main .tabela #table-user::before {
     content: "";
     position: absolute;
     top: -2px;
@@ -67,28 +100,28 @@ main .tabela #table-user::before {
     bottom: -2px;
     border-radius: 0.05rem;
     z-index: -1;
-}
-
-main .tabela #table-user th,
-#table-user td {
+  }
+  
+  main .tabela #table-user th,
+  #table-user td {
     border-bottom: 1px solid orange;
     padding: 1rem;
     text-align: left;
     width: 20%;
     height: 50px;
     min-height: 50px;
-}
-
-
-main .tabela #table-user tr:nth-child(even) {
+  }
+  
+  
+  main .tabela #table-user tr:nth-child(even) {
     background-color: #f9f9f9;
-}
-
-main .tabela #table-user tr:hover {
+  }
+  
+  main .tabela #table-user tr:hover {
     background-color: #cfc7c7;
-}
-
-button {
+  }
+  
+  button {
     align-items: center;
     background-clip: padding-box;
     background: linear-gradient(135deg, orange, red);
@@ -116,20 +149,20 @@ button {
     width: 150px;
     height: 20px;
     z-index: 1;
-}
-
-button:hover,
-button:focus {
+  }
+  
+  button:hover,
+  button:focus {
   background-color: #fb8332;
   box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
-}
-
-button:hover {
+  }
+  
+  button:hover {
   transform: translateY(-1px);
-}
-
-button:active {
+  }
+  
+  button:active {
   background-color: #c85000;
   box-shadow: rgba(0, 0, 0, .06) 0 2px 4px;
   transform: translateY(0);
-}
+  }
