--- a/front-end/src/app/pages/employee/visualizacao-solicitacoes/visualizacao-solicitacoes.component.html
+++ b/front-end/src/app/pages/employee/visualizacao-solicitacoes/visualizacao-solicitacoes.component.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+      rel="stylesheet">
     <link rel="stylesheet" href="../../customer/style/style-padrao.css">
 </head>
 <body>
@@ -11,6 +16,7 @@
     <div id="principal">
       <app-navbar-funcionario (filtroAplicado)="onFiltroAplicado($event)"></app-navbar-funcionario>
         <main>
+          <h3>Solicitações</h3>
           <div class="tabela">
             <table id="table-user">
               <thead>
@@ -29,17 +35,10 @@
                   <td class="item">{{ servico.descricaoErro | slice:0:30 }}</td>
                   <td class="item">{{ servico.status }}</td>
                   <td class="item">
-                    <!--
-                    <button *ngIf="servico.status === 'ABERTA'" (click)="visualizarServico(servico.id)">Visualizar Serviço</button> 
-                    <button *ngIf="servico.status === 'ORÇADA'" (click)="mostrarOrcamento(servico.id)">Aprovar/Rejeitar Serviço</button> 
-                    <button *ngIf="servico.status === 'APROVADA'" (click)="visualizarServico(servico.id)">Visualizar Serviço</button> 
-                    <button *ngIf="servico.status === 'REJEITADA'" (click)="resgatarServico(servico.id)">Resgatar Serviço</button> 
-                    <button *ngIf="servico.status === 'REDIRECIONADA'" (click)="visualizarServico(servico.id)">Visualizar Serviço</button> 
-                    <button *ngIf="servico.status === 'ARRUMADA'" (click)="visualizarServico(servico.id)">Visualizar Serviço</button> 
-                    <button *ngIf="servico.status === 'AGUARDANDO PAGAMENTO'" (click)="pagarServico(servico.id)">Pagar Serviço</button> 
-                    <button *ngIf="servico.status === 'PAGA'" (click)="visualizarServico(servico.id)">Visualizar Serviço</button> 
-                    <button *ngIf="servico.status === 'FINALIZADA'" (click)="visualizarServico(servico.id)">Visualizar Serviço</button> 
-                    -->
+                    <button *ngIf="servico.status === 'ABERTA'" (click)="Efetuaorcamento(servico.id)">Efetuar Orçamento</button> 
+                    <button *ngIf="servico.status === 'APROVADA'" (click)="efetuarManutencao(servico.id)">Efetuar Manutenção</button> 
+                    <button *ngIf="servico.status === 'REDIRECIONADA'" (click)="efetuarManutencao(servico.id)">Efetuar Manutenção</button>
+                    <button *ngIf="servico.status === 'PAGA'" (click)="finalizarSolicitacao(servico.id)">Finalizar serviço</button> 
                   </td>
                 </tr>
               </tbody>
