--- a/front-end/src/styles.css
+++ b/front-end/src/styles.css
@@ -15,3 +15,14 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body {
+	--bg-color: radial-gradient(
+		circle at center,
+		var(--gray),
+		var(--black) 60%
+	);
+	background: var(--bg-color);
+	width: 100vw;
+	min-height: 100dvh;
+}
