--- a/front-end/src/app/pages/employee/crud-categoria/crud-categoria.component.css
+++ b/front-end/src/app/pages/employee/crud-categoria/crud-categoria.component.css
@@ -5,25 +5,15 @@
 	box-sizing: border-box;
 }
 
-body {
-	--bg-color: radial-gradient(
-		circle at center,
-		var(--gray),
-		var(--black) 60%
-	);
-	background: var(--bg-color);
-	width: 100vw;
-	min-height: 100dvh;
-}
-
 main {
 	--bg-color: transparent;
-	height: calc(100dvh - 4rem);
+	height: calc(100dvh);
 	background: var(--bg-color);
 	width: 100%;
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	overflow: hidden;
 }
 
 #container {
@@ -36,36 +26,6 @@ main {
 	border-radius: 10px;
 	max-height: 100%;
 	gap: 1rem;
-}
-
-header {
-	background: var(--bg-color);
-	height: var(--height);
-	max-height: var(--max-height);
-	width: 100%;
-	padding: 0.5rem 5dvw;
-	display: flex;
-	align-items: center;
-	position: relative;
-}
-
-header {
-	--bg-color: transparent;
-	--height: 4rem;
-	--max-height: 4rem;
-
-	top: 0;
-	justify-content: space-between;
-	color: white;
-}
-
-header #icon {
-	--bg-color: linear-gradient(135deg, orange, red);
-
-	background: var(--bg-color);
-	height: 100%;
-	aspect-ratio: 1/1;
-	border-radius: 50%;
 }
 
 h1 {
@@ -143,6 +103,7 @@ button {
 #category-list {
 	max-width: 100%;
 	margin: 0 1rem;
+	overflow: auto;
 }
 
 #categories {
@@ -174,7 +135,6 @@ button {
 }
 
 .modal {
-	display: none;
 	position: fixed;
 	z-index: 1;
 	left: 0;
