--- a/front-end/src/app/pages/employee/efetuar-manutencao/efetuar-manutencao.component.html
+++ b/front-end/src/app/pages/employee/efetuar-manutencao/efetuar-manutencao.component.html
@@ -1,1 +1,70 @@
-<p>efetuar-manutencao works!</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Orcamento</title>
+    <link rel="stylesheet" href="../../customer/style/style-padrao.css">
+</head>
+
+<body>
+    <app-header-cliente></app-header-cliente>
+    <div id="principal">
+        <main>
+            <div id="container">
+                <h1>Efetuar Manutenção</h1>
+                <div id="informacoes" *ngIf="item">
+                    <h2 style="padding-bottom: 1dvh;">Detalhes da Solicitação</h2>
+                    <div class="item-orcamento">
+                        <h3>Descrição do Equipamento:</h3>
+                        <p>{{item.descricaoEquipamento}}</p>
+                    </div>
+                    <div class="item-orcamento">
+                        <h3>Categoria:</h3>
+                        <p>{{item.categoria}}</p>
+                    </div>
+                    <div class="item-orcamento">
+                        <h3>Defeito:</h3>
+                        <p>{{item.descricaoErro}}</p>
+                    </div>
+                    <div>
+
+                    </div>
+                    <h2 style="padding-bottom: 1dvh;">Dados do cliente</h2>
+                    <div id="dados-cliente">
+                        <div class="item-orcamento">
+                            <h3>Nome cliente:</h3>
+                            <p>{{cliente.nome}}</p>
+                        </div>
+                        <div class="item-orcamento">
+                            <h3>E-mail cliente:</h3>
+                            <p>{{cliente.email}}</p>
+                        </div>
+                    </div>
+                </div>
+                <button *ngIf="!mostrarFormulario" id="button-conserto" (click)="efetuarManutencao()">Efetuar
+                    Manutenção</button>
+                <button *ngIf="!mostrarFormulario" (click)="redirecionar()">Redirecionar</button>
+                <div>
+                    <div *ngIf="mostrarFormulario">
+                        <div class="item-form">
+                            <h3>Descrição da Manutenção</h3>
+                            <textarea [(ngModel)]="descricaoManutencao"
+                                placeholder="Digite a descrição da manutenção"></textarea>
+                        </div>
+                        <div class="item-form">
+                            <h3>Orientações para o Cliente</h3>
+                            <textarea [(ngModel)]="orientacoesCliente"
+                                placeholder="Digite as orientações para o cliente"></textarea>
+                        </div>
+                        <button (click)="onSubmit()">Registrar Manutenção</button>
+                    </div>
+                </div>
+                <button onclick="history.back()">Voltar</button>
+            </div>
+        </main>
+    </div>
+</body>
+
+</html>
